3.5.2/_sources/gallery/event_handling/timers.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/event_handling/timers.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_event_handling_timers.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_event_handling_timers.py:


======
Timers
======

Simple example of using general timer objects. This is used to update
the time placed in the title of the figure.

.. GENERATED FROM PYTHON SOURCE LINES 9-36



.. image-sg:: /gallery/event_handling/images/sphx_glr_timers_001.png
   :alt: timers
   :srcset: /gallery/event_handling/images/sphx_glr_timers_001.png, /gallery/event_handling/images/sphx_glr_timers_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np
    from datetime import datetime


    def update_title(axes):
        axes.set_title(datetime.now())
        axes.figure.canvas.draw()

    fig, ax = plt.subplots()

    x = np.linspace(-3, 3)
    ax.plot(x, x ** 2)

    # Create a new timer object. Set the interval to 100 milliseconds
    # (1000 is default) and tell the timer what function should be called.
    timer = fig.canvas.new_timer(interval=100)
    timer.add_callback(update_title, ax)
    timer.start()

    # Or could start the timer on first figure draw:
    # def start_timer(event):
    #     timer.start()
    #     fig.canvas.mpl_disconnect(drawid)
    # drawid = fig.canvas.mpl_connect('draw_event', start_timer)

    plt.show()


.. _sphx_glr_download_gallery_event_handling_timers.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: timers.py <timers.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: timers.ipynb <timers.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
